262 be resource getters return vote info (#266)
* standardize resource getters

* schema adapted
