# back/openapi.yaml
@@ -50,6 +50,14 @@ components:
           example: Token is not valid
       required:
         - error
+    MissingUserError:
+      type: object
+      properties:
+        message:
+          type: string
+          example: User not found
+      required:
+        - message
     ValidationError:
       type: array
       items:
@@ -353,8 +361,10 @@ paths:
                           type: string
                         name:
                           type: string
+                          example: React
                         slug:
                           type: string
+                          example: react
                         categoryId:
                           type: string
                       required:
@@ -513,6 +523,7 @@ paths:
                           example: my-resource-in-javascript
                         description:
                           type: string
+                          nullable: true
                           example: Lorem ipsum javascript
                         url:
                           type: string
@@ -522,9 +533,15 @@ paths:
                           type: string
                           enum: *a1
                         createdAt:
-                          type: string
+                          anyOf:
+                            - type: string
+                              format: date-time
+                            - type: string
                         updatedAt:
-                          type: string
+                          anyOf:
+                            - type: string
+                              format: date-time
+                            - type: string
                         user:
                           type: object
                           properties:
@@ -541,33 +558,66 @@ paths:
                           items:
                             type: object
                             properties:
-                              id:
-                                type: string
-                              name:
-                                type: string
-                              slug:
-                                type: string
-                              categoryId:
-                                type: string
-                              createdAt:
-                                type: string
-                              updatedAt:
-                                type: string
+                              topic:
+                                type: object
+                                properties:
+                                  id:
+                                    type: string
+                                  name:
+                                    type: string
+                                    example: React
+                                  slug:
+                                    type: string
+                                    example: react
+                                  categoryId:
+                                    type: string
+                                  createdAt:
+                                    anyOf:
+                                      - type: string
+                                        format: date-time
+                                      - type: string
+                                  updatedAt:
+                                    anyOf:
+                                      - type: string
+                                        format: date-time
+                                      - type: string
+                                required:
+                                  - id
+                                  - name
+                                  - categoryId
+                                  - createdAt
+                                  - updatedAt
                             required:
-                              - id
-                              - name
-                              - categoryId
-                              - createdAt
-                              - updatedAt
+                              - topic
+                        voteCount:
+                          type: object
+                          properties:
+                            upvote:
+                              type: integer
+                              minimum: 0
+                              example: 14
+                            downvote:
+                              type: integer
+                              minimum: 0
+                              example: 2
+                            total:
+                              type: integer
+                              example: 12
+                          required:
+                            - upvote
+                            - downvote
+                            - total
                       required:
                         - id
                         - title
+                        - slug
                         - url
                         - resourceType
                         - createdAt
                         - updatedAt
                         - user
                         - topics
+                        - voteCount
                 required:
                   - resources
         "500":
@@ -602,6 +652,7 @@ paths:
                   example: My Resource in Javascript
                 description:
                   type: string
+                  nullable: true
                   example: Lorem ipsum javascript
                 url:
                   type: string
@@ -706,38 +757,118 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  title:
-                    type: string
-                    example: My Resource in Javascript
-                  slug:
-                    type: string
-                    example: my-resource-in-javascript
-                  description:
-                    type: string
-                    example: Lorem ipsum javascript
-                  url:
-                    type: string
-                    format: uri
-                    example: https://tutorials.cat/learn/javascript
-                  resourceType:
-                    type: string
-                    enum: *a1
-                  userId:
-                    type: string
-                  createdAt:
-                    type: string
-                  updatedAt:
-                    type: string
+                  resources:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        title:
+                          type: string
+                          example: My Resource in Javascript
+                        slug:
+                          type: string
+                          example: my-resource-in-javascript
+                        description:
+                          type: string
+                          nullable: true
+                          example: Lorem ipsum javascript
+                        url:
+                          type: string
+                          format: uri
+                          example: https://tutorials.cat/learn/javascript
+                        resourceType:
+                          type: string
+                          enum: *a1
+                        createdAt:
+                          anyOf:
+                            - type: string
+                              format: date-time
+                            - type: string
+                        updatedAt:
+                          anyOf:
+                            - type: string
+                              format: date-time
+                            - type: string
+                        user:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+                            email:
+                              type: string
+                              format: email
+                              example: user@example.cat
+                          required:
+                            - email
+                        topics:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              topic:
+                                type: object
+                                properties:
+                                  id:
+                                    type: string
+                                  name:
+                                    type: string
+                                    example: React
+                                  slug:
+                                    type: string
+                                    example: react
+                                  categoryId:
+                                    type: string
+                                  createdAt:
+                                    anyOf:
+                                      - type: string
+                                        format: date-time
+                                      - type: string
+                                  updatedAt:
+                                    anyOf:
+                                      - type: string
+                                        format: date-time
+                                      - type: string
+                                required:
+                                  - id
+                                  - name
+                                  - categoryId
+                                  - createdAt
+                                  - updatedAt
+                            required:
+                              - topic
+                        voteCount:
+                          type: object
+                          properties:
+                            upvote:
+                              type: integer
+                              minimum: 0
+                              example: 14
+                            downvote:
+                              type: integer
+                              minimum: 0
+                              example: 2
+                            total:
+                              type: integer
+                              example: 12
+                          required:
+                            - upvote
+                            - downvote
+                            - total
+                      required:
+                        - id
+                        - title
+                        - slug
+                        - url
+                        - resourceType
+                        - createdAt
+                        - updatedAt
+                        - user
+                        - topics
+                        - voteCount
                 required:
-                  - id
-                  - title
-                  - url
-                  - resourceType
-                  - userId
-                  - createdAt
-                  - updatedAt
+                  - resources
         "401":
           description: Missing token
           content:
@@ -749,13 +880,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: User not found
-                required:
-                  - error
+                $ref: "#/components/schemas/InvalidTokenError"
         "405":
           description: Invalid token
           content:
