# back/src/schemas/resource/resourceSchema.ts
@@ -1,11 +1,12 @@
 import { z } from '../../openapi/zod'
 
 export const resourceSchema = z.object({
-  id: z.string(),
+  id: z.string().cuid(),
   title: z.string().openapi({ example: 'My Resource in Javascript' }),
-  slug: z.string().optional().openapi({ example: 'my-resource-in-javascript' }),
+  slug: z.string().openapi({ example: 'my-resource-in-javascript' }),
   description: z
     .string()
+    .nullable()
     .optional()
     .openapi({ example: 'Lorem ipsum javascript' }),
   url: z
@@ -13,12 +14,7 @@ export const resourceSchema = z.object({
     .url()
     .openapi({ example: 'https://tutorials.cat/learn/javascript' }),
   resourceType: z.enum(['BLOG', 'VIDEO', 'TUTORIAL']),
-  topics: z.array(
-    z.object({
-      id: z.string().cuid(),
-    })
-  ),
   userId: z.string().cuid(),
-  createdAt: z.date(),
-  updatedAt: z.date(),
+  createdAt: z.union([z.string().datetime(), z.date()]),
+  updatedAt: z.union([z.string().datetime(), z.date()]),
 })
